# snippets

./: .clang-format  .gitignore
241407/: output.xlsx  sample.py  sample.xlsx
289322/: .gitignore  CMakeLists.txt  main.cpp  sample.json
289856/: CMakeLists.txt  main.cpp  sample.csv
292090/: CMakeLists.txt  main.cpp
294083/: finetuning-vgg16.ipynb
301193/: CMakeLists.txt  main.cpp  sample.cp38-win_amd64.pyd  sample.py
319114/: app.py
319114/templates/: index.html
